name:                jak
version:             0.3.0.0
synopsis:            Basic text editor
description:         Jak is a basic text editor intended to test experimental features and run benchmarks.
license:             AGPL-3
license-file:        LICENSE
author:              Jaro Reinders
maintainer:          jaro.reinders@gmail.com
category:            Editor
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable jak
  main-is:             Main.hs
  other-modules:       Jak.Core
                     , Jak.Types
                     , Jak.Viewport
                     , Jak.Cursor
                     , Jak.Content
                     , Jak.Frontend.Vty
                     , Jak.Editor
                     , Control.FRPNow.Util
  build-depends:       base >=4.9 && <4.11
                     , frpnow >= 0.18 && < 1
                     , vty >= 5.19 && < 6
                     , containers >= 0.5.10.2 && < 0.6
                     , lens >= 4.16 && < 5
                     , deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
