name:                jak
version:             0.4.0.0
synopsis:            A basic text editor
description:
  Jak is a basic text editor intended to test experimental features and run
  benchmarks.
license:             AGPL-3
license-file:        LICENSE
author:              Jaro Reinders
maintainer:          jaro.reinders@gmail.com
category:            Editor
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable jak
  main-is:             Main.hs
  other-modules:       Jak.Types
                     , Jak.Viewport
                     , Jak.Cursor
                     , Jak.Content
                     , Jak.Editor
  build-depends:       base       <5
                     , Yampa      >= 0.13   && < 0.14
                     , containers >= 0.6.0 && < 0.7
                     , vty        >= 5.25.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -Wall
